# EpiLinkBLR

./: .gitignore  README.md  augment_dataset.py  convert_to_tflite.py  create_bq_tables.py  extract_images.py  fetch_weather.py  generate_synthetic_data.py  mrdt_classifier.dart  prepare_flutter_assets.py  requirements.txt  run_phase1.ps1  run_phase1.sh  run_phase2.ps1  run_phase2.sh  setup_firebase.py  setup_gcp.ps1  setup_gcp.sh  train_model.py  update_rules.py  verify_phase2.py
epilink-dashboard/: DEMO_SCRIPT.md
epilink-dashboard/app/: layout.tsx
epilink-dashboard/app/dashboard/: layout.tsx  page.tsx
epilink-dashboard/components/charts/: RiskTimeline.tsx
epilink-dashboard/components/map/: EpiLinkMap.tsx
epilink-dashboard/components/panels/: AlertFeed.tsx  GeminiPanel.tsx  StatCard.tsx
epilink-dashboard/components/ui/: DateSlider.tsx  RiskBadge.tsx
epilink-dashboard/lib/: bigquery.ts  riskColors.ts  wardBoundaries.ts
epilink_blr/: README.md  SETUP_NOTES.md  analysis_options.yaml  pubspec.yaml
epilink_blr/android/app/: build.gradle.kts
epilink_blr/ios/Runner/: Info.plist
epilink_blr/ios/Runner.xcodeproj/: project.pbxproj
epilink_blr/lib/: app.dart  main.dart  main_web.dart
epilink_blr/lib/db/: local_database.dart  local_database.g.dart
epilink_blr/lib/router/: app_router.dart
epilink_blr/linux/: CMakeLists.txt
epilink_blr/scratch/: check_model.py
epilink_blr/test/: widget_test.dart
epilink_blr/web/: index.html
epilink_blr/windows/: CMakeLists.txt
epilink_blr/windows/runner/: CMakeLists.txt  Runner.rc  main.cpp
(+45 files in other folders)
